--- a/task1/pubspec.yaml
+++ b/task1/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_auth: ^0.20.0+1
   get: ^4.1.4
   firebase_database: ^6.0.0
+
+  onesignal_flutter: ^3.5.0
+
   pinput: ^2.2.16
 
 dev_dependencies:
@@ -61,9 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - Assets/UPI.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
