--- a/task1/android/app/src/main/AndroidManifest.xml
+++ b/task1/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- Test Ad Android config. -->
+         <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8249373889615589~3003079072"/>
     </application>
 </manifest>
